HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/CapabilityClassesDiagnostics/Expected.uv
//! Expected diagnostic metadata for the CapabilityClassesDiagnostics rejected-source specimen.

expectedDiagnostic("E-MEM-3030", "diag.14.CapabilityClasses")
